Remove MapStruct, add profile picture support for entities
Replaced MapStruct-based DTO mapping with manual implementation and added profile picture management for Owners and Rats. Introduced new controllers, services, and configurations to handle image uploads and storage. Updated tests and data models to reflect these changes.