@@ -5,9 +5,6 @@ import lol.khakikukhi.ratplushies.repositories.RatRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.boot.test.context.SpringBootTest;
-
-import jakarta.transaction.Transactional;
 
 import java.util.Optional;
 
@@ -29,7 +26,7 @@ public class OwnerRatRelationTest {
 
         ratRepository.save(rat);
 
-        Optional<Rat> found = ratRepository.findById(rat.getRatId());
+        Optional<Rat> found = ratRepository.findById(rat.getId());
         assertTrue(found.isPresent());
         assertNull(found.get().getOwner());
     }
@@ -49,8 +46,8 @@ public class OwnerRatRelationTest {
         rat.setOwner(owner);
         ratRepository.save(rat);
 
-        Rat updated = ratRepository.findById(rat.getRatId()).orElseThrow();
-        assertEquals(owner.getOwnerId(), updated.getOwner().getOwnerId());
+        Rat updated = ratRepository.findById(rat.getId()).orElseThrow();
+        assertEquals(owner.getId(), updated.getOwner().getId());
     }
 
     @Test
@@ -74,8 +71,8 @@ public class OwnerRatRelationTest {
         rat.setOwner(newOwner);
         ratRepository.save(rat);
 
-        Rat fetched = ratRepository.findById(rat.getRatId()).orElseThrow();
-        assertEquals(newOwner.getOwnerId(), fetched.getOwner().getOwnerId());
+        Rat fetched = ratRepository.findById(rat.getId()).orElseThrow();
+        assertEquals(newOwner.getId(), fetched.getOwner().getId());
     }
 
     @Test
@@ -93,7 +90,7 @@ public class OwnerRatRelationTest {
         owner.clearAllRats();
         ownerRepository.delete(owner);
 
-        Rat stillThere = ratRepository.findById(rat.getRatId()).orElseThrow();
+        Rat stillThere = ratRepository.findById(rat.getId()).orElseThrow();
         assertNull(stillThere.getOwner());
     }
 
@@ -107,17 +104,21 @@ public class OwnerRatRelationTest {
         Rat r1 = new Rat();
         r1.setName("Alpha");
         owner.addRat(r1);
+        ratRepository.save(r1);
 
         Rat r2 = new Rat();
         r2.setName("Beta");
         owner.addRat(r2);
-
-        ratRepository.save(r1);
         ratRepository.save(r2);
 
-        Owner fetched = ownerRepository.findById(owner.getOwnerId()).orElseThrow();
+        // Ensure everything is flushed before re-fetch
+        ratRepository.flush();
+        ownerRepository.flush();
+
+        Owner fetched = ownerRepository.findById(owner.getId()).orElseThrow();
         assertEquals(2, fetched.getRats().size());
     }
+
 
     @Test
     void reassigningRatRemovesItFromOldOwner() {
@@ -142,9 +143,9 @@ public class OwnerRatRelationTest {
         ratRepository.save(rat);
 
         // Confirm Rat is in A's list
-        Owner freshA = ownerRepository.findById(ownerA.getOwnerId()).orElseThrow();
+        Owner freshA = ownerRepository.findById(ownerA.getId()).orElseThrow();
         assertEquals(1, freshA.getRats().size());
-        assertEquals("Ghosty", freshA.getRats().get(0).getName());
+        assertEquals("Ghosty", freshA.getRats().getFirst().getName());
 
         // Reassign to B using .addRat()
         ownerB.addRat(rat); // should remove from A and assign to B
@@ -154,16 +155,16 @@ public class OwnerRatRelationTest {
         ownerRepository.save(ownerB);
 
         // Reload everything
-        Rat updatedRat = ratRepository.findById(rat.getRatId()).orElseThrow();
-        Owner updatedA = ownerRepository.findById(ownerA.getOwnerId()).orElseThrow();
-        Owner updatedB = ownerRepository.findById(ownerB.getOwnerId()).orElseThrow();
+        Rat updatedRat = ratRepository.findById(rat.getId()).orElseThrow();
+        Owner updatedA = ownerRepository.findById(ownerA.getId()).orElseThrow();
+        Owner updatedB = ownerRepository.findById(ownerB.getId()).orElseThrow();
 
         // Owner A should no longer have the rat
         assertFalse(updatedA.getRats().contains(updatedRat), "Old owner still references the rat — ghost rat!");
 
         // Owner B should now own the rat
         assertTrue(updatedB.getRats().contains(updatedRat), "New owner doesn't have the rat");
-        assertEquals(updatedB.getOwnerId(), updatedRat.getOwner().getOwnerId(), "Rat's owner field is not updated correctly");
+        assertEquals(updatedB.getId(), updatedRat.getOwner().getId(), "Rat's owner field is not updated correctly");
     }
 
     @Test
@@ -183,7 +184,46 @@ public class OwnerRatRelationTest {
         ownerRepository.delete(owner);
 
         // Rat should still exist
-        assertTrue(ratRepository.findById(rat.getRatId()).isPresent());
+        assertTrue(ratRepository.findById(rat.getId()).isPresent());
+    }
+
+    @Test
+    void deletingOwnerFailsIfRatsAreStillLinked_thenSucceedsAfterManualUnlinking() {
+        // Setup: Owner with a rat
+        Owner owner = new Owner();
+        owner.setUsername("ratkeeper");
+        owner.setPassword("123");
+        ownerRepository.save(owner);
+
+        Rat rat = new Rat();
+        rat.setName("Whiskers");
+        owner.addRat(rat);
+        ratRepository.save(rat);
+
+        // Flush to enforce DB constraints
+        ownerRepository.flush();
+        ratRepository.flush();
+
+        // Step 1: Try deleting without unlinking — expect failure
+        assertThrows(Exception.class, () -> {
+            ownerRepository.delete(owner);
+            ownerRepository.flush(); // must flush to trigger DB constraint
+        });
+
+        // Step 2: Manually clear rats and retry delete
+        owner.clearAllRats();
+        ratRepository.save(rat); // persist the owner=null change
+        ratRepository.flush();
+
+        ownerRepository.delete(owner);
+        ownerRepository.flush(); // this should now succeed
+
+        // Confirm owner is gone
+        assertFalse(ownerRepository.findById(owner.getId()).isPresent());
+
+        // Confirm rat still exists and has no owner
+        Rat orphanRat = ratRepository.findById(rat.getId()).orElseThrow();
+        assertNull(orphanRat.getOwner());
     }
 
 }
